fixes #20 tightening up gap between rows and also fixed copy that wasn't following design

--- a/src/layouts/Home/AboutSection.module.css
+++ b/src/layouts/Home/AboutSection.module.css
@@ -55,9 +55,10 @@
 }
 
 .about-points {
-  display: grid;
-  gap: 15px;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 30px;
+  line-height: var(--line-height-tight);
 }
 
 .more-about-btn {
